--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,27 @@
-[package]
-name = "datalchemy"
+[workspace]
+members = [
+  "crates/datalchemy-core",
+  "crates/datalchemy-introspect",
+  "crates/datalchemy-cli",
+  "crates/datalchemy-plan",
+  "crates/datalchemy-generate",
+  "crates/datalchemy-eval",
+]
+resolver = "2"
+
+[workspace.package]
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "tls-native-tls"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-anyhow = "1"
-async-trait = "0.1"
+[workspace.dependencies]
+async-trait = "0.1.89"
+chrono = { version = "0.4.39", features = ["clock", "serde"] }
+clap = { version = "4.5.23", features = ["derive"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio-rustls"] }
+thiserror = "1.0.69"
+tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["fmt", "json", "time"] }
+uuid = { version = "1.10.0", features = ["serde", "v4"] }
