--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ edition = "2024"
 async-trait = "0.1.89"
 chrono = { version = "0.4.39", features = ["clock", "serde"] }
 clap = { version = "4.5.23", features = ["derive"] }
+jsonschema = "0.18.0"
+schemars = "0.8.21"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio-rustls"] }
