--- a/crates/datalchemy-core/Cargo.toml
+++ b/crates/datalchemy-core/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+schemars.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 
