--- a/crates/datalchemy-introspect/Cargo.toml
+++ b/crates/datalchemy-introspect/Cargo.toml
@@ -9,6 +9,7 @@ async-trait.workspace = true
 sqlx.workspace = true
 
 [dev-dependencies]
+jsonschema.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
 anyhow = "1.0.100"
