--- a/crates/datalchemy-plan/Cargo.toml
+++ b/crates/datalchemy-plan/Cargo.toml
@@ -4,4 +4,9 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+jsonschema.workspace = true
+schemars.workspace = true
 serde.workspace = true
+serde_json.workspace = true
+thiserror.workspace = true
+datalchemy-core = { path = "../datalchemy-core" }
