--- a/crates/datalchemy-generate/Cargo.toml
+++ b/crates/datalchemy-generate/Cargo.toml
@@ -4,4 +4,14 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+csv = "1.3.1"
+datalchemy-core = { path = "../datalchemy-core" }
+datalchemy-plan = { path = "../datalchemy-plan" }
+rand = "0.8.5"
+rand_chacha = "0.3.1"
+regex = "1.11.2"
 serde.workspace = true
+serde_json.workspace = true
+thiserror.workspace = true
+uuid.workspace = true
+chrono.workspace = true
