--- a/crates/datalchemy-eval/Cargo.toml
+++ b/crates/datalchemy-eval/Cargo.toml
@@ -4,5 +4,12 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+chrono.workspace = true
+csv = "1.3.1"
 datalchemy-core = { path = "../datalchemy-core" }
+datalchemy-generate = { path = "../datalchemy-generate" }
+datalchemy-plan = { path = "../datalchemy-plan" }
 serde.workspace = true
+serde_json.workspace = true
+thiserror.workspace = true
+uuid.workspace = true
