feat(pr_task_M0_baseline): Implementação da M0 e criação das tasks para M1-M7 seguindo o novo padrão de organização.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ target
 .env
 schema.json
 runs/
+out/
 # RustRover
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
