--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ target
 schema.json
 runs/
 out/
+/datalchemy-cli/
 # RustRover
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
