feat(faker-rs): implement full fake-rs integration (F0-F7)
This commit implements the complete fake-rs integration as defined in
the pr_task_implement-faker-rs plan:

## F0 - Scope and decisions
- Created task and evidence files
- Fixed pre-existing clippy warnings

## F1 - Plan with generator.id string + compat layer
- Plan now accepts generator as string or object (id, locale, params)
- Added GeneratorRef/GeneratorSpec types
- Updated plan_version to 0.2 and regenerated plan.schema.json

## F2 - fake-rs dependency + unique adapter
- Added fake = 4.4.0 with features to datalchemy-generate
- Created FakeRsAdapter as single point of fake::faker::* usage
- Updated rand/rand_chacha versions for compatibility

## F3 - Auto-generated catalog + semantic.* aliases
- Created tools/gen_faker_catalog.rs for code generation
- Generated catalog_gen.rs with faker.* IDs
- Added faker_catalog/overrides.toml for semantic.*/primitive.* aliases

## F4 - Complete types + advanced params
- Added primitive.* typed generators (int, float, uuid, date, time, timestamp, text)
- Implemented ParamSpec validation (min_len, max_len, pattern, charset, etc.)
- Direct error on invalid/unknown params

## F5 - Locales pt_BR + en_US
- Plan now accepts global.locale via PlanGlobal
- LocaleKey enum for pt_BR/en_US support
- Override per column with direct error on unsupported locale

## F6 - Migration from old generators
- Removed old heuristics (name/email patterns)
- Applied fallback by type (primitive.*)
- Detect email columns by CHECK constraint

## F7 - Docs + list_generators + contract tests
- Created docs/faker_integration.md
- Added list_generators example
- Added tests/faker_catalog.rs with contract tests

Total: 219 generators available (faker.*, semantic.*, primitive.*, derive.*, domain.*)

Closes: pr_task_implement-faker-rs

--- a/crates/datalchemy-generate/Cargo.toml
+++ b/crates/datalchemy-generate/Cargo.toml
@@ -7,16 +7,19 @@ edition.workspace = true
 csv = "1.3.1"
 datalchemy-core = { path = "../datalchemy-core" }
 datalchemy-plan = { path = "../datalchemy-plan" }
-rand = "0.8.5"
-rand_chacha = "0.3.1"
+fake = { version = "=4.4.0", default-features = true, features = ["derive", "chrono", "chrono-tz", "time", "uuid", "ulid", "serde_json", "random_color", "email_address", "geo", "http", "rust_decimal"] }
+http = "1.4.0"
+rand = "0.9.0"
+rand_chacha = "0.9.0"
 regex = "1.11.2"
 serde.workspace = true
 serde_json.workspace = true
+time = "0.3.44"
 thiserror.workspace = true
 uuid.workspace = true
 chrono.workspace = true
 hex = "0.4.3"
-rand_regex = "0.17.0"
+rand_regex = "0.18.1"
 sha2 = "0.10.8"
 tracing.workspace = true
 tracing-subscriber.workspace = true
