--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
   "crates/datalchemy-generate",
   "crates/datalchemy-eval",
 ]
+exclude = ["tools"]
 resolver = "2"
 
 [workspace.package]
